fixed some display issues on mobile

--- a/css/waelCV.css
+++ b/css/waelCV.css
@@ -64,8 +64,6 @@ header{
 	padding:0;
 	width: 100%;
 	height: 50px;
-	min-height: 5%;
-	max-height: 100px;
 	z-index: 10;
 	color: var(--style1-fg-color);
 	background-color:var(--style1-bg-color);
@@ -373,4 +371,64 @@ a svg{
 	height: 64px;
 	width: 64px;
 	fill: currentColor;
+}
+
+@media only screen and (max-device-width: 480px) {
+header{
+	height: 100px;
+}
+.navbar{
+	width: 100%;
+	height: 100%;
+	margin-left: 0%;
+	margin-right: 0%;
+}
+.navbar li a{
+	font-size: 40px;
+}
+.skill-set{
+	width: 100%;
+	height: initial;
+}
+.skill-set table{
+	font-size: 30px;
+	border: 1px solid var(--style2-fg-color);
+}
+.skills .vertical-seperator{
+	width: 0;
+	height: 0;
+	margin-right: 0;
+	margin-left: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+.skills .horizontal-seperator{
+	width: 0;
+	height: 0;
+	margin-right: 0;
+	margin-left: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+.vertical-seperator{
+	width: 40%;
+	height: 1px;
+	margin-right: 30%;
+	margin-left: 30%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+footer p{
+	font-size: 30px !important;
+}
+.left{
+	float: none;
+}
+.right{
+	float: none;
+}
+footer .container{
+	height: initial;
+}
 }
